# pywildsort

./: README.md
pywildsort/: .pdm-python  INSTALL.md  Makefile  README.md  compile_commands.json  pyproject.toml  release.sh  setup.py
pywildsort/src/: wildsort.c
wildsort/: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  compile_commands.json
wildsort/cmake/: FindCriterion.cmake
wildsort/src/: wildsort.c  wildsort.h
wildsort/test/: wildsort_test.c
